# lway

./: .env  .gitignore  Cargo.toml  LICENSE  apps.yaml  embark.config  justfile  notes.txt  readme.md  rust-toolchain.toml
.cargo/: config.toml
apps/: app.c
examples/: dup_demo.c  pipe.rs
scripts/: run-qemu.sh
src/: logger.rs  main.rs  parser.rs  pipe.rs  runtime.rs  utils.rs
