[package]
name = "lway"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
libc = "0.2.180"
thiserror = "2.0.18"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.29"
simple_logger = "5.1.0"

[dev-dependencies]

[build-dependencies]

# read https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
panic = "abort"
# codegen-units = 1      # better optimizations
# debug = true
# opt-level = 1
# overflow-checks = true
# lto = false

[profile.release]
panic = "abort"
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

